Change Log:

2.09  1) Modified src/Makefile.am for FreeBSD name space clash

2.08  1) Changes to build process:
	     a. Use PortAudio's C API; the C++ bindings are no longer required
         b. Boost is no longer required when std::(tr1::)bind is available,
            as is the case with g++ >= 4.0
         c. Autodetect TLS support
         d. Use std::bind (or std::tr1::bind) if available. 
         e. Add m4 macros for TLS autodetection (the --enable-tls/--disable-tls 
            switches are still supported).
         f. Minor changes to configure.ac
      2) qrunner cleanups
      3) New ringbuffer and other utility code
      4) New item in the sample rate menu: "Native" selects the hardware's 
         preferred sample rate. Breaks backward compatibility: saving this 
         with fldigi-2.08 will result in an "invalid sample rate" message if 
         the same fldigi_def.xml file is then used with 2.07 -- until "Auto" 
         or a specific value is selected again.
      5) Correction to the waterfall's "casual tuning" feature: don't set the 
         modem to SIGSEARCH when the right mouse button is released.
      6) Set locale only for LC_TIME
      7) Add .desktop, move icons to data/; for deb / rpm build compatibility
      8) Exception trapping and print to stdout on program failure 
      9) Fixes to modem class logic:
         a. Olivia  Corrected uninitialized variables.
         b. MFSK    Corrected uninitialized variables. Fixed memory leak.
         c. CW      Corrected uinitialized variable. 
         d. Throb   Fix memory leak caused by using the wrong delete operator.
         e. PSK     Corrected uninitialized variables.
     10) Rigcat/Hamlib dialog.  Added mode, sideband, and current audio
         frequency to "saved" frequencies list.

2.07  1) bug fix for mode changes via SysV interface (pskmail / flarq)
      2) bug fix for modem configuration post quick change from status
         bar using mouse wheel.