@@ -7,10 +7,18 @@
 #include <Fl/Fl_Group.H>
 #include <Fl/Fl_Pack.H>
 
+class pskBrowser : public Fl_Hold_Browser{
+public:
+	pskBrowser(int x, int y, int w, int h, const char *l = "")
+		:Fl_Hold_Browser(x,y,w,h,l) {}
+	~pskBrowser() {};
+	void resize(int x, int y, int w, int h);
+};
+
 extern Fl_Double_Window *dlgViewer;
 extern Fl_Button *btnCloseViewer;
 extern Fl_Button *btnClearViewer;
-extern Fl_Hold_Browser *brwsViewer;
+extern pskBrowser *brwsViewer;
 
 extern Fl_Double_Window* createViewer();
 
